# production-vlm-engineering

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  wrong_result.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  run_all.py
configs/: embedding_drift_active_learning.yaml  vlm_chart_finetune.yaml  vlm_edge_inference.yaml  vlm_robustness_guard.yaml  vlm_video_temporal.yaml
docker/: Dockerfile  Dockerfile.gpu
docs/: api.md  benchmark_report.md  citations.md  contributing.md  index.md
docs/assets/: extra.css
docs/concepts/: drift.md  lora.md  metrics.md  robustness.md
docs/examples/: edge_inference.md  embedding_drift.md  overview.md  robustness_guard.md  vlm_chart_finetune.md  vlm_video_temporal.md
docs/getting_started/: architecture.md  installation.md  quickstart.md
examples/pipelines/embedding_drift_active_learning/: README.md  run.py  (+1 more)
notebooks/: 01_evaluation_metrics.ipynb  02_drift_detection_active_learning.ipynb  03_robustness_safety_guard.ipynb  README.md
notebooks/colab/: 01_evaluation_metrics_colab.ipynb  02_drift_detection_colab.ipynb  03_robustness_guard_colab.ipynb  README.md
scripts/: verify_no_pytest.py
src/cv_playbook/: __init__.py  cli.py  config.py
src/production_vlm/: __init__.py  cli.py  config.py
tests/: conftest.py  test_batching_queue.py  test_config.py  test_drift.py  test_eval.py  test_kv_cache.py  test_observability_retraining.py  test_robustness.py  test_synthetic_charts.py  test_vision_encoder.py
(+88 files in other folders)
