[project]
name = "production-vlm-engineering"
version = "0.1.0"
description = "Reproducible production-grade multimodal vision pipelines, efficient adaptation, and MLOps for 2026-2027 frontier systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mattral" }]

dependencies = [
  "pyyaml>=6.0.0",
  "numpy>=1.26.0",
  "scipy>=1.13.0",
  "matplotlib>=3.9.0",
  "pillow>=10.0.0",
]

[project.optional-dependencies]
# Full ML stack — required for *real* GPU fine-tuning/inference runs (P0-02, P0-03).
# Without this installed, examples still run a CPU-only pipeline-mechanics smoke test.
ml = [
  "torch>=2.3.0",
  "transformers>=4.45.0",
  "peft>=0.13.0",
  "accelerate>=0.34.0",
  "bitsandbytes>=0.43.0",
  "datasets>=2.20.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
]
cli = ["rich>=13.7.0", "typer>=0.12.0"]
onnx = ["onnx>=1.16.0", "onnxruntime>=1.18.0", "optimum>=1.21.0"]
serving = ["fastapi>=0.112.0", "uvicorn>=0.30.0"]
demo = ["gradio>=4.40.0"]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "pre-commit>=3.7.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.25.0",
]

[project.scripts]
production-vlm = "production_vlm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/production_vlm"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
